--- a/main.css
+++ b/main.css
@@ -327,6 +327,24 @@ h1{
     box-shadow: 0px 0px 5px rgba(0,0,0,0.4);
 }
 
+.reset-button{
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+    width: 89px;
+    padding: 2px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 20px;
+    color: white;
+    border-radius: 5px;
+    background-color: #667799;
+    box-shadow: 0px 2px 3px rgba(0,0,0,.3);
+}
+
 .hidden{
     display: none;
 }
